# mdpdf

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SPEC.md  flake.nix  justfile
src/: cli.rs  lib.rs  main.rs  render.rs  report.rs  template.typ
tests/: compare.rs  generate_references.sh  integration.rs  visual.sh
tests/fixtures/: basic.md  code.md  headings.md  long.md  math.md  tables.md  unicode.md
tests/legacy/: preamble.tex
tests/references/text/: basic.txt  code.txt  headings.txt  long.txt  math.txt  tables.txt
