[package]
name = "mdpdf"
version = "0.2.0"
edition = "2024"
publish = false
license = "MIT"
description = "Markdown-to-PDF transducer with built-in unicode math support"

[[bin]]
name = "mdpdf"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
typst = "0.14"
typst-as-lib = { version = "0.15", features = ["typst-kit-fonts", "typst-kit-embed-fonts", "packages"] }
typst-pdf = "0.14"
typst-embedded-package = { version = "0.4", features = ["read-archive"] }

[dev-dependencies]
tempfile = "3"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
